config/base/derive/tests/ui_fail/nested_with_other_attrs.rs
use iroha_config_base::ReadConfig;

#[derive(ReadConfig)]
struct Test {
    #[config(nested, env_only)]
    nested: Nested,
}

#[derive(ReadConfig)]
struct Nested {
    foo: Option<bool>,
}

pub fn main() {}
